# emergency-scenario-agent

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
emergency_scenario_agent/: __init__.py  api.py  cli.py  engine.py  llm.py  models.py
emergency_scenario_agent/frontend/: app.js  index.html
examples/: chemical_leak.json  high_rise_fire.json
tests/: test_api.py  test_engine.py
