[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergency-scenario-agent"
version = "1.0.0"
description = "基于多 Agent 分工的应急场景推演系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.136.1",
  "pydantic>=2.13.3",
  "httpx>=0.28.1",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
]

[project.scripts]
emergency-scenario-agent = "emergency_scenario_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
