[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergency-scenario-agent"
version = "1.4.0"
description = "基于多 Agent 分工的应急场景推演系统"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.136.1",
  "pydantic>=2.13.3",
  "httpx>=0.28.1",
  "socksio>=1.0.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
]

[project.urls]
Homepage = "https://github.com/llf24123/emergency-scenario-agent"
Repository = "https://github.com/llf24123/emergency-scenario-agent"
Issues = "https://github.com/llf24123/emergency-scenario-agent/issues"

[project.scripts]
emergency-scenario-agent = "emergency_scenario_agent.cli:main"

[tool.setuptools.package-data]
emergency_scenario_agent = ["frontend/*.html", "frontend/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
